<resources>
    <string name="app_name">PixNotes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 	<string name="new_session">New Session</string>
 	<string name="export">Export</string>
 	<string name="send_mail">Send email</string>
 	<string name="str_send">Send</string>
 	<string name="str_setting">Settings</string>
 	<string name="system_environment">System Environment</string>
 	<string name="system_version">System Version: </string>
 	<string name="str_mode">Model: </string>
 	<string name="str_format">Format</string>
 	<string name="str_resolution">Resolution: </string>
    <string name="str_gridview">Grid template</string>
    <string name="str_style">Style</string>
    <string name="str_Color">Color</string>
    <string name="str_bordersize">Border Size</string>
    <string name="str_rec">REC</string>
    <string name="str_colon">:</string>
    <string name="str_opacity">Opacity</string>
    <string name="str_fontsize">Font Size</string>
    <string name="str_small">Small</string>
    <string name="str_medium">Medium</string>
    <string name="str_large">Large</string>
    <string name="str_choice_multiple_image">Choices Image</string>
    <string name="str_openproject">Open Project</string>
    <string name="str_manage_projectes">Manage Projects</string>
    <string name="str_new_project">New Project</string>
    <string name="str_delete">Delete</string>
     <string name="str_project_name">Project Name</string>
     <string name="str_capture">Capture</string>
     <string name="str_insert_photo">Insert Photo</string>
     <string name="str_alert_project_name">Please input project name</string>
     <string name="str_alert_duplicate_project">Duplicate project </string>
     <string name="str_ok">Ok</string>
     <string name="str_cancel">Cancel</string>
     <string name="str_auto_detect">Auto detect</string>
     <string name="str_all">All</string>
     <string name="str_a_image">A image</string>
     <string name="str_multi_image">Multi images</string>
     <string name="str_start">Start</string>
     <string name="str_addtext">Add Text</string>
     <string name="str_alert_text_null">Don\'t allow empty text</string>
     <string name="str_skip">Skip</string>
     <string name="str_suggest_create_project">There is no project , Please create new project</string>
     <string name="str_description_html">View Mode Include Audio</string>
     <string name="str_description_word">Edit Mode</string>
      <string name="str_description_pdf">View Mode</string>
     <string-array name="activity_titles">
        <item>Basic usage playground</item>
        <item>Heteroheight</item>
        <item>Warp</item>
        <item>Background handle</item>
        <item>Sections</item>
        <item>CursorAdapter</item>
        <item>Multiple-choice mode</item>
        <item>Single-choice mode</item>
    </string-array>
    <string-array name="activity_descs">
        <item>
            Use the menu to adjust settings related to item
            removal and drag initiation. These options are
            provided by the DragSortController class.
        </item>
        <item>
            Demonstrates (tests) drag-sorting when list items
            have varying heights.
        </item>
        <item>
            Demonstrates drag-scroll customization; long lists
            need fast scrolling.
        </item>
        <item>
            Simple DragSortController customization. In this example,
            the drag handle is a background drawable; therefore, the
            drag handle hit detection mechanism needs modification. 
            Also, the floating View is given some flavor.
        </item>
        <item>
            Demonstrates floating View control from a custom
            FloatViewManager. Restrict item drags to list sections.
        </item>
        <item>
            Demonstrates usage of the DragSortCursorAdapter class,
            which abstracts drag-sorts with a remapping of Cursor
            positions to ListView positions.
        </item>
        <item>
            Uses Checkable list items in multiple-choice mode.
        </item>
        <item>
            Uses Checkable list items to allow for selectable radio
            buttons in single-choice mode.
        </item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_remove_mode">Remove modes</string>
    <string name="select_drag_init_mode">Start-drag modes</string>
    <string name="select_enables">Enable/Disable</string>
    <string name="add_header">Add header</string>
    <string name="add_footer">Add footer</string>
    <string-array name="remove_mode_labels">
      <item>Click remove</item>
      <item>Fling remove</item>
    </string-array>
    <string-array name="drag_init_mode_labels">
      <item>On down</item>
      <item>On drag</item>
      <item>On long press</item>
    </string-array>
    <string-array name="enables_labels">
      <item>Enable drag</item>
      <item>Enable sort</item>
      <item>Enable remove</item>
    </string-array>
    <string-array name="jazz_artist_names">
      <item>Brad Mehldau</item>
      <item>Joshua Redman</item>
      <item>Chick Corea</item>
      <item>Kurt Rosenwinkel</item>
      <item>Miles Davis</item>
      <item>Wayne Shorter</item>
      <item>Michael Brecker</item>
      <item>Herbie Hancock</item>
      <item>Joe Zawinul</item>
      <item>Brian Blade</item>
      <item>Jeff Ballard</item>
      <item>Larry Grenadier</item>
      <item>Keith Jarrett</item>
      <item>McCoy Tyner</item>
      <item>Stephon Harris</item>
      <item>Mark Turner</item>
    </string-array>
    <string-array name="jazz_artist_albums">
      <item>Largo, Art of the Trio 1-4, Highway Rider, Songs</item>
      <item>Elastic, Momentum, Mood Swing, Back East</item>
      <item>Light as a Feather, Akoustic Band, My Spanish Heart</item>
      <item>Deep Song, Heartcore, Our Secret World, Reflections, The Remedy: Live at the Village Vanguard, The Enemies of Energy, The Next Step</item>
    </string-array>
</resources>