<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_theme" >

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/background_header"
         >
          <RelativeLayout
	        android:id="@+id/rl_back"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/header_height"
	        >
	        <Button
	            android:id="@+id/btn_back"
	            android:layout_width="@dimen/width_40dp"
	            android:layout_height="@dimen/width_40dp"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="@dimen/margin_10dp"
	            android:background="@drawable/back" />
          	<View android:layout_width="30dp"
          	   android:layout_height="@dimen/header_height" 
          	   android:layout_toRightOf="@+id/btn_back"/>  
		
		  </RelativeLayout>
		
          <TextView 
		    android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text=""
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <View 
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/rl_header"
        android:background="@drawable/line"
        android:visibility="invisible"/>
	<RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line" >
       
	    <LinearLayout
	    android:id="@+id/ln_manager_content"
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp">
		
	        <LinearLayout 
		  	    android:id="@+id/rl_block_1"
		  	    android:layout_width="match_parent"
        		android:layout_height="0dp"
        		android:orientation="vertical"
        		android:layout_weight="20"
        		android:layout_gravity="center_vertical"
		  	    >
		  	    	<RelativeLayout 
		  	    	    android:layout_width="match_parent"
				    	android:layout_height="fill_parent"
		  	    	 >
		  	    	    
		  	    	<RadioGroup
				    android:id="@+id/radioGroup"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" 
				    android:layout_centerInParent="true"
				    >
	
				    <RadioButton
				        android:id="@+id/radio_all"
				        android:layout_width="0dp"
				        android:layout_weight="25"
				        android:layout_height="wrap_content"
				        android:checked="true"
				        android:text="@string/str_all"
				        android:textColor="@color/text_color" />
	
				    <RadioButton
				        android:id="@+id/radio_a_image"
				        android:layout_width="0dp"
				        android:layout_weight="35"
				        android:layout_height="wrap_content"
				        android:text="@string/str_a_image" 
				        android:layout_gravity="center"
				        android:textColor="@color/text_color"/>
										
			  	    <RadioButton
				        android:id="@+id/radio_multi_images"
				        android:layout_width="0dp"
				        android:layout_weight="40"
				        android:layout_height="wrap_content"
				        android:text="@string/str_multi_image" 
				        android:layout_gravity="center"
				        android:textColor="@color/text_color"/>
					</RadioGroup> 
		  	    	    
		  	    	<View  
		  	    	    android:layout_width="fill_parent"
		  	    	    android:layout_height="2dp"
		  	    	    android:background="@drawable/line_dark"
		  	    	    android:layout_alignParentBottom="true"/>	    
		  	    	    
		  	    </RelativeLayout>
	        </LinearLayout>  
	        
		  	<RelativeLayout 
		  	    android:id="@+id/rl_block_2"
		  	    android:layout_width="match_parent"
        		android:layout_height="0dp"
        		android:layout_weight="15"
		  	    >
		  	    <TextView 
		  	    android:id="@+id/tv_system_info"
		  	    android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/system_environment"
        		android:layout_centerVertical="true"
        		android:textSize="@dimen/text_size_20dp"
        		android:textColor="@color/text_color"
        		/>
						 
				<com.pixnotes.common.MySwitch
		        android:id="@+id/switch_on_off"
		        style="@style/mySwitchStyle"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        mySwitch:textOff="OFF"
		        mySwitch:textOn="ON"
		        mySwitch:textOnThumb="false"
		        mySwitch:thumb="@drawable/switch_thumb"
		        mySwitch:track="@drawable/switch_track"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true" /> 
		        
				<View  
		  	    	    android:layout_width="fill_parent"
		  	    	    android:layout_height="2dp"
		  	    	    android:background="@drawable/line_dark"
		  	    	    android:layout_alignParentBottom="true"/>	    
		  	</RelativeLayout>
		  	
		  	<LinearLayout 
		  	    android:id="@+id/rl_block_3"
		  	    android:layout_width="match_parent"
        		android:layout_height="0dp"
        		android:orientation="horizontal"
        		android:layout_weight="40"
		  	    >
				
		  	    <LinearLayout 
		  	    android:layout_width="0dp"
        		android:layout_height="match_parent"
        		android:orientation="horizontal"
        		android:layout_weight="22"
		  	    >
				<TextView 
		  	    android:id="@+id/tv_format"
		  	    android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/str_format"
        		android:textSize="@dimen/text_size_20dp"
        		android:textColor="@color/text_color"
        		android:layout_gravity="center"
        		/>		  	        
		  	    </LinearLayout>
		  	    
		  	    <LinearLayout 
		  	    android:layout_width="0dp"
        		android:layout_height="match_parent"
        		android:orientation="horizontal"
        		android:layout_weight="26">
		  	        
			  	    
		  	        <RelativeLayout 
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center"
        				android:layout_marginLeft="@dimen/margin_15dp" >
			  	    	        
		  	            <RelativeLayout 
		  	            android:id="@+id/rl_img_html"
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center"
        				android:layout_marginLeft="@dimen/margin_15dp"
        				android:layout_marginTop="@dimen/margin_20dp">
		  	                
			  	            <ImageView 
					  	    android:id="@+id/img_html"
					  	    android:layout_width="@dimen/width_60dp"
			        		android:layout_height="@dimen/height_70dp"
			        		android:background="@drawable/html"
			        		android:layout_centerVertical="true"
			        		/>
				  	        
				  	        <ImageView 
					  	    android:id="@+id/img_check_html"
					  	    android:layout_width="@dimen/width_30dp"
			        		android:layout_height="@dimen/width_30dp"
			        		android:background="@drawable/ok"
			        		android:layout_alignBottom="@+id/img_html"
			        		android:layout_toRightOf="@+id/img_html"
			        		android:layout_marginLeft="@dimen/margin_negative_15dp"
			        		android:layout_marginBottom="@dimen/margin_negative_15dp"
			        		/> 
		  	                
		  	            </RelativeLayout>
			  	        
		        		
			  	       <TextView 
			  	            android:layout_width="wrap_content"
			  	            android:layout_height="wrap_content"
			  	            android:layout_below="@+id/rl_img_html"
			  	            android:text="@string/str_description_html"
			  	            android:textColor="@color/text_color"
			  	            android:layout_marginTop="@dimen/margin_15dp"
			  	       />
			  	       
			  	    </RelativeLayout>
		  	        
		  	    </LinearLayout>
		  	    
		  	    <LinearLayout 
		  	    android:layout_width="0dp"
        		android:layout_height="match_parent"
        		android:orientation="horizontal"
        		android:layout_weight="26"
		  	        >
		  	        <RelativeLayout 
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center"
        				android:layout_marginLeft="@dimen/margin_15dp" >
			  	    	        
		  	            <RelativeLayout 
		  	            android:id="@+id/rl_img_world"
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center"
        				android:layout_marginLeft="@dimen/margin_15dp" >
			  	            <ImageView 
					  	    android:id="@+id/img_world"
					  	    android:layout_width="@dimen/width_60dp"
			        		android:layout_height="@dimen/height_70dp"
			        		android:background="@drawable/word"
			        		android:layout_centerVertical="true"
			        		/>
				  	        
				  	        <ImageView 
					  	    android:id="@+id/img_check_world"
					  	    android:layout_width="@dimen/width_30dp"
			        		android:layout_height="@dimen/width_30dp"
			        		android:background="@drawable/ok"
			        		android:layout_alignBottom="@+id/img_world"
			        		android:layout_toRightOf="@+id/img_world"
			        		android:layout_marginLeft="@dimen/margin_negative_15dp"
			        		android:layout_marginBottom="@dimen/margin_negative_15dp"
			        		/> 
		  	            </RelativeLayout>
			  	        
			  	        <TextView 
			  	            android:layout_width="wrap_content"
			  	            android:layout_height="wrap_content"
			  	            android:layout_below="@+id/rl_img_world"
			  	            android:text="@string/str_description_word"
			  	            android:textColor="@color/text_color"
			  	            android:layout_marginTop="@dimen/margin_15dp"
			  	            />
			  	        
			  	    </RelativeLayout>
		  	    </LinearLayout>
		  	    
		  	    <LinearLayout 
		  	    android:layout_width="0dp"
        		android:layout_height="match_parent"
        		android:orientation="horizontal"
        		android:layout_weight="26"
		  	        >
			  	    <RelativeLayout 
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center"
        				android:layout_marginLeft="@dimen/margin_15dp">
			  	        
			  	        <RelativeLayout 
			  	        android:id="@+id/rl_img_pdf"
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_gravity="center"
        				android:layout_marginLeft="@dimen/margin_15dp">
			  	            
				  	        <ImageView 
					  	    android:id="@+id/img_pdf"
					  	    android:layout_width="@dimen/width_60dp"
			        		android:layout_height="@dimen/height_70dp"
			        		android:background="@drawable/pdf"
			        		android:layout_centerVertical="true"
			        		/>
				  	        
				  	        <ImageView 
					  	    android:id="@+id/img_check_pdf"
					  	    android:layout_width="@dimen/width_30dp"
			        		android:layout_height="@dimen/width_30dp"
			        		android:background="@drawable/ok"
			        		android:layout_alignBottom="@+id/img_pdf"
			        		android:layout_toRightOf="@+id/img_pdf"
			        		android:layout_marginLeft="@dimen/margin_negative_15dp"
			        		android:layout_marginBottom="@dimen/margin_negative_15dp"
			        		/> 
			  	            
			  	        </RelativeLayout>
		        		
			  	        <TextView 
			  	            android:layout_width="wrap_content"
			  	            android:layout_height="wrap_content"
			  	            android:layout_below="@+id/rl_img_pdf"
			  	            android:text="@string/str_description_pdf"
			  	            android:textColor="@color/text_color"
			  	            android:layout_marginTop="@dimen/margin_15dp"
			  	            />
			  	        
			  	    </RelativeLayout>
			  	    
		  	    </LinearLayout>
		  	    
		  	    <!-- <TextView 
		  	    android:id="@+id/tv_format"
		  	    android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/str_format"
        		android:textSize="@dimen/text_size_20dp"
        		android:textColor="@color/text_color"
        		/>
		  	    <RelativeLayout 
		  	    android:id="@+id/rl_imgpdf_world"
		  	    android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginLeft="@dimen/margin_45dp"
        		android:layout_marginRight="@dimen/margin_45dp"
        		android:layout_marginTop="@dimen/margin_8dp"
		  	    >
			  	    <RelativeLayout 
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content">
			  	        <ImageView 
				  	    android:id="@+id/img_pdf"
				  	    android:layout_width="@dimen/width_80dp"
		        		android:layout_height="@dimen/height_90dp"
		        		android:background="@drawable/pdf"
		        		android:layout_centerVertical="true"
		        		/>
			  	        
			  	        <ImageView 
				  	    android:id="@+id/img_check_pdf"
				  	    android:layout_width="@dimen/width_30dp"
		        		android:layout_height="@dimen/width_30dp"
		        		android:background="@drawable/ok"
		        		android:layout_alignBottom="@+id/img_pdf"
		        		android:layout_toRightOf="@+id/img_pdf"
		        		android:layout_marginLeft="@dimen/margin_negative_15dp"
		        		android:layout_marginBottom="@dimen/margin_negative_15dp"
		        		/> 
			  	        
			  	    </RelativeLayout>
			  	        
			  	    <RelativeLayout 
			  	        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_alignParentRight="true" >
			  	    	        
			  	         <ImageView 
				  	    android:id="@+id/img_world"
				  	    android:layout_width="@dimen/width_80dp"
		        		android:layout_height="@dimen/height_90dp"
		        		android:background="@drawable/word"
		        		android:layout_centerVertical="true"
		        		/>
			  	        
			  	        <ImageView 
				  	    android:id="@+id/img_check_world"
				  	    android:layout_width="@dimen/width_30dp"
		        		android:layout_height="@dimen/width_30dp"
		        		android:background="@drawable/ok"
		        		android:layout_alignBottom="@+id/img_world"
		        		android:layout_toRightOf="@+id/img_world"
		        		android:layout_marginLeft="@dimen/margin_negative_15dp"
		        		android:layout_marginBottom="@dimen/margin_negative_15dp"
		        		/> 
			  	    </RelativeLayout>
			  	    
		  		</RelativeLayout> -->
		  	    
		  	</LinearLayout>
		  	
		  	<RelativeLayout 
		  	    android:id="@+id/rl_block_4"
		  	    android:layout_width="match_parent"
        		android:layout_height="0dp"
        		android:layout_weight="25"
		  	    >
		  	    <View  
		  	    	android:layout_width="fill_parent"
		  	    	android:layout_height="2dp"
		  	    	android:background="@drawable/line_dark"
		  	    	   />	    
		  	    <Button
	            android:id="@+id/btn_send"
	            android:layout_width="fill_parent"
	            android:layout_height="@dimen/height_40dp"
	            android:layout_centerVertical="true"
	            android:text="@string/str_send"
	            android:textColor="@color/white"
	            android:background="@drawable/save" />
		  	</RelativeLayout>
		  	
	    </LinearLayout>
	    
	     <LinearLayout 
	         android:id="@+id/ln_menu"
	         android:layout_width="@dimen/width_150dp"
	         android:layout_height="match_parent"
	         android:layout_alignParentRight="true"
	         android:orientation="horizontal"
	         android:visibility="gone"
	         >
	         <ImageView 
	             android:id="@+id/img_arrow_slide"
	             android:layout_width="16dp"
	             android:layout_height="50dp"
	             android:background="@drawable/arrow_slide"
	             android:layout_gravity="center_vertical"/>
	         <RelativeLayout 
	             android:layout_width="fill_parent"
	             android:layout_height="fill_parent"
	             android:background="@color/transparent_background_template"
	            >
	         
	             <ListView
			        android:id="@+id/lv_sendmail"
			        android:layout_width="@dimen/image_width_size_100dp"
			        android:layout_height="fill_parent"
			       	android:divider="@android:color/transparent"
  					android:dividerHeight="@dimen/margin_15dp"
  					android:background="@android:color/transparent"
  					android:scrollbars="none"
  					android:layout_marginTop="@dimen/margin_10dp"
  					android:layout_centerInParent="true"
			       >
			    </ListView>
	             
	             <View android:layout_width="fill_parent"
	                 android:layout_height="@dimen/margin_10dp"
	                 android:layout_centerInParent="true"
	                 android:layout_below="@+id/lv_sendmail"/>
	             
	         </RelativeLayout>
	         
	    </LinearLayout>
	    
	    
    </RelativeLayout>
    
    
</RelativeLayout>